# autoware_system_designer

./: README.md  autoware_system_designer.instructions.md
autoware_system_design_examples/: CMakeLists.txt
autoware_system_design_examples/deployment/: vehicle_x.system.yaml
autoware_system_design_examples/design/module/perception/: DetectorA.module.yaml  (+3 more)
autoware_system_design_examples/design/node/: ControlDummy.node.yaml  LocalizationDummy.node.yaml  MapDummy.node.yaml  PlanningDummy.node.yaml
autoware_system_design_examples/design/parameter_set/: PerceptionModuleA.parameter_set.yaml
autoware_system_design_examples/design/system/: TypeAlpha.process_group.yaml  TypeAlpha.system.yaml
autoware_system_designer/: package.xml
autoware_system_designer/autoware_system_designer/: deploy.py
autoware_system_designer/autoware_system_designer/builder/: deployment_instance.py
autoware_system_designer/autoware_system_designer/deployment/: parser.py
autoware_system_designer/autoware_system_designer/file_io/: source_location.py  template_renderer.py
autoware_system_designer/autoware_system_designer/models/: config.py  system_structure.py  yaml_schema.py
autoware_system_designer/autoware_system_designer/ros2_launcher/: generate_module_launcher.py  generate_node_launcher.py
autoware_system_designer/autoware_system_designer/template/: parameter_set.yaml.jinja2  parameter_template_generator.py  sys_monitor_topics.yaml.jinja2
autoware_system_designer/autoware_system_designer/visualization/: deployment_overview.html  visualization_index.py  visualize_deployment.py
(+44 files in other folders)
