<?xml version="1.0"?>
<package format="3">
  <name>autoware_system_designer</name>
  <version>0.3.0</version>
  <description>The autoware_system_designer package</description>

  <maintainer email="taekjin.lee@tier4.jp">Taekjin Lee</maintainer>
  <license>Apache License 2.0</license>
  <author email="taekjin.lee@tier4.jp">Taekjin Lee</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <build_depend>python3-jsonschema</build_depend>

  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
